feat: add get all pets and users methods and improve gh actions